# unsafe-code

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  GEMINI.md  IMPROVEMENT_PLAN.md  LICENSE  README.md  SECURITY.md  STYLE_GUIDE.md  annotations.md  default_file  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md  PROMPTS.md  shell-init.sh
.claude/agents/: code-author.md  commit-agent.md  content-planner.md  demo-author.md  demo-debugger.md  docs-author.md  infra-maintainer.md  spec-author.md  spec-debugger.md  spec-runner.md  uc-code-crafter.md  uc-curriculum-strategist.md  uc-demo-debugger.md  uc-docs-editor.md  uc-docs-generator-maintainer.md  uc-exploit-narrator.md  uc-maintainer.md  uc-spec-author.md  uc-spec-debugger.md  uc-spec-runner.md  uc-spec-sync.md  uc-taxonomy-maintainer.md  uc-vulnerability-designer.md  unsafe-code-lab-enhancer.md
.claude/commands/: brainstorm-exercise.md  check-inheritance.md  extend-exercise.md  fix-exercises.md  fix-failing-specs.md  health-check.md  maximize-inheritance.md  quick-context.md  review-exercises.md  run-specs.md  validate-demos.md
.claude/commands/demo/: improve.md  scope.md  validate.md
.claude/commands/exercise/: bootstrap.md  brainstorm.md  extend.md  fix.md  partner.md  review.md  scope.md
.claude/commands/meta/: align.md  context.md  health.md
.claude/commands/spec/: fix.md  inheritance.md  maximize.md  run.md  scope.md
.claude/references/: character-profiles.md  common-gotchas.md  demo-style-philosophy.md  http-syntax-quickref.md
.claude/skills/commit-workflow/: SKILL.md
.claude/skills/demo-conventions/: SKILL.md
.claude/skills/demo-principles/: SKILL.md
.claude/skills/documentation-style/: SKILL.md
.claude/skills/http-assertion-gotchas/: SKILL.md
.claude/skills/http-core/: SKILL.md
.claude/skills/http-demo-conventions/: SKILL.md
.claude/skills/http-e2e-specs/: SKILL.md  helpers.md  syntax.md
.claude/skills/http-editing-policy/: SKILL.md
.claude/skills/http-gotchas/: SKILL.md
.claude/skills/http-interactive-demos/: SKILL.md  narrative-guide.md  syntax.md
.claude/skills/http-spec/: SKILL.md
.claude/skills/http-syntax/: SKILL.md
.claude/skills/uclab-tools/: SKILL.md
.gemini/: settings.json
.serena/: project.yml
.serena/memories/: exploit-poc-quality-checklist.md  pedagogical-design-philosophy.md
docs/: ANNOTATION_FORMAT.md  MAINTAINER_AI.md  shared_confusion_curriculum.md
docs/ai/: README.md  characters.md  curriculum.md  decision-trees.md  http-demos.md  http-specs.md  http-syntax.md  invariants.md  runbooks.md  spec-review-workflow.md  spec-vs-demo.md  tools.md  unsafe-lab-playbook.md
docs/confusion_curriculum/: README.md  database_migrations.md  endpoint_index.md  r01_input_source_confusion.md  r02_authentication_confusion.md  r03_authorization_confusion.md  r04_cardinality_confusion.md  r05_normalization_issues.md
flask-confusion/: .dockerignore  Dockerfile  compose.yml  run.py
flask-confusion/webapp/: HTTP_SUITE.md  README.md  __init__.py  routes.py
foundations/: README.md
languages/: README.md
spec/: .httpyac.js  HTTP_SYNTAX.md  INHERITANCE.md  README.md  TESTING_CONVENTIONS.md  common.http  spec.yml  utils.cjs
spec/v204/: _imports.http
spec/v205/: _imports.http  spec.yml
spec/v206/: _imports.http
spec/v301/: .env  account-credits-get-guardrails.http  account-credits-get-happy.http  account-credits-post-guardrails.http  account-credits-post-happy.http  account-credits-post-v301.http  account-info-get-guardrails.http  account-info-get-happy.http  auth-login-guardrails.http  auth-login-happy.http  auth-logout-happy.http  auth-register-guardrails.http  auth-register-happy.http  cart-checkout-happy.http  cart-checkout-ownership.http  cart-checkout-params.http  cart-checkout-reuse.http  cart-create-guardrails.http  cart-create-happy.http  cart-items-guardrails.http  cart-items-happy.http  menu-get-happy.http  orders-list-guardrails.http  orders-list-happy.http  orders-refund-post-guardrails.http  orders-refund-post-happy.http  orders-refund-status-guardrails.http  orders-refund-status-happy.http  orders-status-guardrails.http  orders-status-happy.http  restaurants-list-happy.http  vuln-dual-auth-refund.http
spec/v302/: .env  _imports.http  cart-create-v302.http  orders-refund-status-v302.http  vuln-cart-swap-checkout.http
spec/v308/: _imports.http
spec/v404/: _imports.http
tools/: focus.py  spec_sync.py  ucdiff.py  ucexport.py  uclint.py  ucspec.py  ucsync.py
tools/dev/: QUICKSTART.md  README.md  ucdemo  unsafe-code-dev.sh
tools/docs/: STYLE_GUIDE.md  __main__.py  annotation_parser.py  cli.py  fs_utils.py  indexer.py  languages.py  link_checker.py  markdown_generator.py  models.py  readme_spec.py  yaml_io.py
tools/unsafe_docs/: annotation_parser.py  cli.py  cli_new.py  fs_utils.py  indexer.py  languages.py  markdown_generator.py  models.py  readme_spec.py  yaml_io.py
vulnerabilities/: README.md
(+1518 files in other folders)
