[project]
name = "unsafe-docs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pyyaml>=6.0.1",
  "esprima>=4.0.1",
  # Use upstream Git repo for Markdown generation library
  # Provides the `markdowngenerator` module used by tools.docs
  "python-markdown-generator @ git+https://github.com/Nicceboy/python-markdown-generator",
]

[project.scripts]
docs = "tools.docs.cli:docs_main"


[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
exclude = [
  "tools/**/tests/**",
]

[tool.hatch.metadata]
allow-direct-references = true
