[project]
name = "unsafe-docs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pyyaml>=6.0.1",
  "esprima>=4.0.1",
  # Use upstream Git repo for Markdown generation library
  # Provides the `markdowngenerator` module used by tools.docs
  "python-markdown-generator @ git+https://github.com/Nicceboy/python-markdown-generator",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "pytest>=8.0.0",
]

[project.scripts]
docs = "tools.docs.cli:docs_main"
focus = "tools.focus:main"
ucsync = "tools.ucsync:main"
uclint = "tools.uclint:main"
ucdiff = "tools.ucdiff:main"


[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
exclude = [
  "tools/**/tests/**",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
mypy_path = "."
explicit_package_bases = true
files = ["tools/"]
exclude = [
  "^foundations/",
  "^vulnerabilities/",
  "^build/",
  "^\\.venv/",
  "^tools/.*/tests/",
]

[[tool.mypy.overrides]]
module = ["yaml", "markdowngenerator", "esprima"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tools/**/tests/**" = ["S101"] # Allow assert in tests
# CherryPy REST API requires uppercase HTTP method names (GET, POST, PUT, DELETE)
"foundations/python/cherrypy/rest-api/app.py" = ["N802"]
# Bottle example uses wildcard import pattern for route registration
"foundations/python/bottle/basic/run.py" = ["F403"]
# Flask routing examples intentionally import after app creation for demonstration
"foundations/python/flask/routing-multifile-register/webapp/__init__.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tools"]
python_files = ["test_*.py"]
addopts = "-v"
